added users tenders and bids api
